--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wise-js",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "JS library for dApps to authenticate with WISE",
   "keywords": [
     "WISE",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@stacks/auth": "2.0.0-beta.0",
     "@stacks/storage": "2.0.0-beta.0",
+    "@stacks/encryption": "^2.0.0-beta.0",
     "@stacks/common": "2.0.0-beta.0"
   },
   "devDependencies": {
